# Belador_Bot_Telegram

./: .env.example  Cargo.toml  README.md
src/: main.rs
src/application/: create.rs  delete.rs
src/commands/: mod.rs
src/commands/create/: create_category.rs  create_task.rs  mod.rs
src/commands/delete/: delete_category_by_title.rs  delete_task_by_title.rs  mod.rs
src/data/: data.json
src/domain/: category.rs  command.rs  mod.rs  resolve_args.rs  resolved_command.rs  subtask.rs  task.rs
src/infrastructure/: connection_mongodb.rs  folder_fs.rs  mod.rs
