[package]
name = "project_todo"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
mongodb = { version = "3.2.5", features = ["sync"] }

dotenvy = "0.15"   